--- a/app/src/main/res/layout/activity_rpm.xml
+++ b/app/src/main/res/layout/activity_rpm.xml
@@ -1,88 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RPM">
 
-    <Switch
-        android:id="@+id/imperial_metric"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:text="Imperial" />
 
     <EditText
         android:id="@+id/InLeft"
-        android:layout_width="60dp"
-        android:layout_height="33dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="74dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="63dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LeftText" />
 
     <EditText
         android:id="@+id/InRight"
-        android:layout_width="60dp"
-        android:layout_height="30dp"
-        android:layout_alignTop="@+id/InLeft"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="68dp"
+        android:layout_width="57dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/InLeft"
+        app:layout_constraintTop_toTopOf="@+id/LeftText" />
+
+    <TextView
+        android:id="@+id/LeftText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="128dp"
+        android:text="Diameter (in)"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="148dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="284dp"
+        android:layout_marginEnd="8dp"
         android:onClick="calculate"
-        android:text="Calculate" />
+        android:text="Calculate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/DiameterText"
+        android:id="@+id/RightText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imperial_metric"
-        android:layout_alignStart="@+id/InLeft"
-        android:text="Diameter"
-        android:textColor="@android:color/black" />
-
-    <TextView
-        android:id="@+id/SFMText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/InLeft"
-        android:layout_alignStart="@+id/InRight"
-        android:layout_marginBottom="-80dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="8dp"
         android:text="SFM"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toEndOf="@+id/LeftText"
+        app:layout_constraintTop_toTopOf="@+id/LeftText" />
 
     <TextView
         android:id="@+id/answer_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="121dp"
-        android:layout_marginTop="223dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="372dp"
         android:text="RPM"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/answer_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/answer_title"
-        android:layout_alignEnd="@+id/imperial_metric"
-        android:text="TextView" />
+        android:layout_marginStart="84dp"
+        app:layout_constraintStart_toEndOf="@+id/answer_title"
+        app:layout_constraintTop_toTopOf="@+id/answer_title" />
 
-</RelativeLayout>
+    <Switch
+        android:id="@+id/ImperialMetric"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="8dp"
+        android:text="Imperial"
+        app:layout_constraintEnd_toStartOf="@+id/Metric_Text"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/Metric_Text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="128dp"
+        android:text="Metric"
+        android:textColor="@android:color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ImperialMetric" />
+
+    <RadioGroup
+        android:id="@+id/rpmRadioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="160dp"
+        android:orientation='horizontal'
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <RadioButton
+            android:id="@+id/rpmRadio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="RPM" />
+
+        <RadioButton
+            android:id="@+id/ipmRadio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="IPM" />
+
+        <RadioButton
+            android:id="@+id/sfmRadio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="SFM" />
+    </RadioGroup>
+
+
+</android.support.constraint.ConstraintLayout>
