updated drill chart to only show selected categories that're selected at the top

--- a/app/src/main/res/layout/activity_drill_chart.xml
+++ b/app/src/main/res/layout/activity_drill_chart.xml
@@ -1,15 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".DrillChart">
-
-<ListView
-    android:id="@+id/chart"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout_editor_absoluteX="-3dp"
-    tools:layout_editor_absoluteY="8dp" />
+    tools:context=".DrillChart">
+
+    <ListView
+        android:id="@+id/chart"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/number" />
+
+    <ToggleButton
+        android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="number"
+        android:textOff="number"
+        android:textOn="number"
+        app:layout_constraintEnd_toStartOf="@+id/letter"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/letter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="letter"
+        android:textOff="letter"
+        android:textOn="letter"
+        app:layout_constraintEnd_toStartOf="@+id/fractional"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/number"
+        app:layout_constraintTop_toTopOf="@+id/number" />
+
+    <ToggleButton
+        android:id="@+id/fractional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="fractional"
+        android:textOff="fractional"
+        android:textOn="fractional"
+        app:layout_constraintEnd_toStartOf="@+id/metric"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/letter"
+        app:layout_constraintTop_toTopOf="@+id/letter" />
+
+    <ToggleButton
+        android:id="@+id/metric"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:checked="true"
+        android:text="metric"
+        android:textOff="metric"
+        android:textOn="metric"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/fractional"
+        app:layout_constraintTop_toTopOf="@+id/fractional" />
 </android.support.constraint.ConstraintLayout>
