Added drill size search

--- a/app/src/main/res/layout/activity_rpm.xml
+++ b/app/src/main/res/layout/activity_rpm.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:nextFocusForward="@+id/InRight"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@+id/inMid"
         app:layout_constraintTop_toTopOf="@+id/InLeft" />
@@ -160,7 +160,7 @@
         android:layout_height="51dp"
         android:layout_marginStart="36dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/InLeft"
